--- a/Dev.ipynb
+++ b/Dev.ipynb
@@ -2,11 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eb283f58-4794-4c11-84e6-dbb5512dbcf6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: data.table\n",
+      "\n",
+      "Loading required package: Matrix\n",
+      "\n",
+      "Loading required package: hdf5r\n",
+      "\n",
+      "Loading required package: reticulate\n",
+      "\n",
+      "Loading required package: R.utils\n",
+      "\n",
+      "Loading required package: R.oo\n",
+      "\n",
+      "Loading required package: R.methodsS3\n",
+      "\n",
+      "R.methodsS3 v1.8.2 (2022-06-13 22:00:14 UTC) successfully loaded. See ?R.methodsS3 for help.\n",
+      "\n",
+      "R.oo v1.26.0 (2024-01-24 05:12:50 UTC) successfully loaded. See ?R.oo for help.\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘R.oo’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:R.methodsS3’:\n",
+      "\n",
+      "    throw\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:methods’:\n",
+      "\n",
+      "    getClasses, getMethods\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    attach, detach, load, save\n",
+      "\n",
+      "\n",
+      "R.utils v2.12.3 (2023-11-18 01:00:02 UTC) successfully loaded. See ?R.utils for help.\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘R.utils’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:utils’:\n",
+      "\n",
+      "    timestamp\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    cat, commandArgs, getOption, isOpen, nullfile, parse, warnings\n",
+      "\n",
+      "\n",
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Loading required package: grid\n",
+      "\n",
+      "Loading required package: gridExtra\n",
+      "\n",
+      "Loading required package: glue\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘glue’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:R.oo’:\n",
+      "\n",
+      "    trim\n",
+      "\n",
+      "\n",
+      "Loading required package: readr\n",
+      "\n",
+      "Loading required package: RColorBrewer\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "library(ShinyCell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8795d566",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "R -e \"shiny::runApp('shinyApp')\""
+   ]
   }
  ],
  "metadata": {
